--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "pkg-name",
+  "name": "a-ui",
   "type": "module",
-  "version": "0.0.0",
+  "version": "0.0.0.alpha",
   "packageManager": "pnpm@8.1.1",
   "description": "",
-  "author": "Anthony Fu <anthonyfu117@hotmail.com>",
+  "author": "Noicu",
   "license": "MIT",
-  "funding": "https://github.com/sponsors/antfu",
-  "homepage": "https://github.com/antfu/pkg-name#readme",
+  "funding": "https://github.com/sponsors/noicu",
+  "homepage": "https://github.com/noicu/a-ui#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/antfu/pkg-name.git"
+    "url": "git+https://github.com/noicu/a-ui.git"
   },
-  "bugs": "https://github.com/antfu/pkg-name/issues",
+  "bugs": "https://github.com/noicu/a-ui/issues",
   "keywords": [],
   "sideEffects": false,
   "exports": {
