--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "a-ui",
   "type": "module",
-  "version": "0.0.0-alpha",
+  "version": "0.0.0",
   "packageManager": "pnpm@8.1.1",
   "description": "",
   "author": "Noicu",
