--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "a-ui",
+  "name": "fn-ui",
   "type": "module",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "packageManager": "pnpm@8.1.1",
   "description": "",
   "author": "Noicu",
